--- a/webroot/css/datsumou/shop/index_bk200207.css
+++ b/webroot/css/datsumou/shop/index_bk200207.css
@@ -50,7 +50,7 @@
 .shop-top .shop-top-desc-area {
   padding: 1.25em;
   color: #595960;
-  border-bottom: 1px solid #e1ddcc; }
+  border-bottom: 1px solid #eeece4; }
   .shop-top .shop-top-desc-area .shop-top-desc-middle {
     padding: 8px 0 10px 0;
     display: -webkit-box;
@@ -128,8 +128,8 @@
 .shop-info {
   padding: 1.5em 16px;
   position: relative;
-  border-bottom: 1px solid #e1ddcc;
-  border-top: 1px solid #e1ddcc; }
+  border-bottom: 1px solid #eeece4;
+  border-top: 1px solid #eeece4; }
   .shop-info .content-feature {
     position: absolute;
     top: 1em;
@@ -150,8 +150,8 @@
 
 .shop-plan {
   padding: 1.5em 15px;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc;}
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4;}
 
 .shop-plan .content-title {
   padding-left: 1px; }
@@ -209,8 +209,8 @@
 
 .shop-datsumou {
   padding: 15px 16px;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc; }
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4; }
   .shop-datsumou .shop-part-list {
     display: -webkit-box;
     display: -webkit-flex;
@@ -289,8 +289,8 @@
 
 .shop-photo {
   padding-bottom: 1em;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc; }
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4; }
   .shop-photo .content-title {
     padding: 1em 16px; }
   @media (min-width: 751px) {
@@ -408,15 +408,15 @@
 
 .shop-kuchikomi-post {
   padding: 15px 16px;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc; }
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4; }
   .shop-kuchikomi-post .shop-kuchikomi-button-area {
     padding-top: 15px; }
 
 .shop-address {
   position: relative;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc; }
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4; }
   .shop-address .content-title {
     padding: 1em 16px; }
   .shop-address .shop-address-fix {
@@ -437,8 +437,8 @@
 
 .shop-info-detail {
   padding: 15px 16px;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc; }
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4; }
   .shop-info-detail .content-title {
     padding-bottom: .5em; }
   .shop-info-detail .shop-info-detail-area-wrap .shop-info-detail-area:not(:first-child) {
@@ -529,9 +529,9 @@
 
 .shop-share {
   padding: 15px 16px 15px 16px;
-  border-top: 1px solid #e1ddcc; }
+  border-top: 1px solid #eeece4; }
 
 .shop-kuchikomi {
-    border-top: 1px solid #e1ddcc;
-    border-bottom: 1px solid #e1ddcc;
+    border-top: 1px solid #eeece4;
+    border-bottom: 1px solid #eeece4;
 }
