--- a/webroot/css/bk/datsumou_bk_200131.css
+++ b/webroot/css/bk/datsumou_bk_200131.css
@@ -189,7 +189,7 @@ footer {
   right: 0;
   opacity: 0;
   width: 100%;
-  border-bottom: 1px solid #e1ddcc;
+  border-bottom: 1px solid #eeece4;
   background: #fff;
   z-index: 1;
 }
@@ -198,14 +198,14 @@ footer {
   margin-top: 0;
   font-size: 16px;
   text-align: left;
-  border-top: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
   overflow: hidden;
 }
 .menu-area li::after {
   position: absolute;
   top: calc(50% - 8px);
   right: 16px;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -335,7 +335,7 @@ footer {
   right: 16px;
   transform: translateY(-50%);
   display: inline-block;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -437,7 +437,7 @@ footer {
 .datsumou-searcharea__list > li {
   width: 49.5%;
   margin-top: 1em;
-  border: 1px solid #e1ddcc;
+  border: 1px solid #eeece4;
   border-radius: 4px;
   background: #fff;
   text-align: center;
@@ -459,14 +459,14 @@ footer {
 
 /* サロン・クリニックを探す */
 .datsumou-search__list {
-  border-bottom: 1px solid #e1ddcc;
+  border-bottom: 1px solid #eeece4;
   background: #fff;
   font-size: 14px;
 }
 .datsumou-area__list > li {
   font-size: 16px;
   text-align: left;
-  border-top: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
   background: #fff;
 }
 .datsumou-area__list > li a {
@@ -503,7 +503,7 @@ footer {
   position: absolute;
   top: calc(50% - 8px);
   right: 16px;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -517,8 +517,8 @@ footer {
   padding-right: 15px;
   padding-left: 15px;
   padding-bottom: 20px;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4;
   background: #fff;
   font-size: 14px;
 }
@@ -541,7 +541,7 @@ footer {
 }
 .datsumou-ranking__tab-search__list label {
   width: 30%;
-  border: 1px solid #e1ddcc;
+  border: 1px solid #eeece4;
   border-radius: 4px;
   padding-top: 0.8em;
   margin-right: 1%;
@@ -629,7 +629,7 @@ footer {
   padding-right: 15px;
   padding-left: 15px;
   padding-bottom: 20px;
-  border-bottom: 1px solid #e1ddcc;
+  border-bottom: 1px solid #eeece4;
   background: #fff;
   font-size: 14px;
 }
@@ -653,7 +653,7 @@ footer {
   position: absolute;
   top: calc(50% - 8px);
   right: 16px;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -724,7 +724,7 @@ footer {
   padding-right: 15px;
   padding-left: 15px;
   padding-bottom: 20px;
-  border-top: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
   background: #fff;
   font-size: 14px;
 }
@@ -827,8 +827,8 @@ footer {
   width: 100%;
   height: 30px;
   margin-top: 1em;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4;
   background: #fbf9f7;
 }
 .Search__breadcrumbs ol {
