--- a/webroot/css/datsumou.css
+++ b/webroot/css/datsumou.css
@@ -202,7 +202,7 @@ footer {
   right: 0;
   opacity: 0;
   width: 100%;
-  border-bottom: 1px solid #e1ddcc;
+  border-bottom: 1px solid #eeece4;
   background: #fff;
   z-index: 1;
 }
@@ -211,14 +211,14 @@ footer {
   margin-top: 0;
   font-size: 16px;
   text-align: left;
-  border-top: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
   overflow: hidden;
 }
 .menu-area li::after {
   position: absolute;
   top: calc(50% - 8px);
   right: 16px;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -365,7 +365,7 @@ body {
   right: 16px;
   transform: translateY(-50%);
   display: inline-block;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -377,7 +377,7 @@ body {
   right: 17px;
   transform: translateY(-50%);
   display: inline-block;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 14px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -389,7 +389,7 @@ body {
   right: 17px;
   transform: translateY(-50%);
   display: inline-block;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 14px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -488,7 +488,7 @@ body {
   align-items: center;
   width: 100%;
   max-width: 600px;
-  border-bottom: 1px solid #e1ddcc;
+  border-bottom: 1px solid #eeece4;
 
   background-color: #fff;
   padding-right: 10px;
@@ -575,7 +575,7 @@ body {
 .datsumou-searcharea__list > li {
   width: 49.5%;
   margin-top: 1em;
-  border: 1px solid #e1ddcc;
+  border: 1px solid #eeece4;
   border-radius: 4px;
   background: #fff;
   text-align: center;
@@ -597,21 +597,21 @@ body {
 
 /* サロン・クリニックを探す */
 .datsumou-search__list {
-  border-bottom: 1px solid #e1ddcc;
+  border-bottom: 1px solid #eeece4;
   background: #fff;
   font-size: 14px;
 }
 .datsumou-area__list > li {
   font-size: 16px;
   text-align: left;
-  border-top: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
   background: #fff;
 }
 .datsumou-area__list > li a {
   position: relative;
   display: block;
   width: 100%;
-  padding: 22px 15px;
+  padding: 20px 10px;
   color: #13121e;
   text-decoration: none;
 }
@@ -640,8 +640,8 @@ body {
 .datsumou-area__list > li a::after {
   position: absolute;
   top: calc(50% - 8px);
-  right: 16px;
-  color: #d6ceb4;
+  right: 10px;
+  color: #e0dccc;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -650,13 +650,13 @@ body {
 
 /* ランキングから探す */
 .datsumou-ranking {
-  margin-top: 5px;
-  padding-top: 20px;
-  padding-right: 15px;
-  padding-left: 15px;
-  padding-bottom: 20px;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc;
+  margin-top: 8px;
+  padding-top: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4;
   background: #fff;
   font-size: 14px;
 }
@@ -679,7 +679,7 @@ body {
 }
 .datsumou-ranking__tab-search__list label {
   width: 30%;
-  border: 1px solid #e1ddcc;
+  border: 1px solid #eeece4;
   border-radius: 4px;
   padding-top: 0.8em;
   margin-right: 1%;
@@ -782,16 +782,16 @@ body {
   position: relative;
   display: -webkit-box;
   display: flex;
-  padding: 10px;
+  padding: 10px 0px;
   padding-bottom: 0.6em;
-  margin-bottom: 0.7em;
+  margin-bottom: 15px;
   background: #faf8f6;
 }
 .datsumou-evaluation-panel__list > li::after {
   position: absolute;
   top: calc(50% - 8px);
-  right: 16px;
-  color: #d6ceb4;
+  right: 5px;
+  color: #E0DCCC;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -802,7 +802,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding-right: 30px;
+  padding-right: 20px;
   box-sizing: border-box;
   color: #13121e;
   text-decoration: none;
@@ -834,6 +834,7 @@ body {
   margin-top: 0.5em;
   font-size: 12px;
   color: #797152;
+  line-height: 1.4;
 }
 .datsumou-evaluation-panel__star {
   margin-top: 0.5em;
@@ -845,7 +846,7 @@ body {
 }
 .datsumou-evaluation-panel__star .red {
   margin-right: 20px;
-  margin-left: 1em;
+  margin-left: 5px;
   color: #e10000;
   font-weight: 600;
 }
@@ -866,12 +867,12 @@ body {
 
 /* Purilの3つの特徴 */
 .datsumou-characteristic {
-  margin-top: 5px;
+  margin-top: 8px;
   padding-top: 20px;
   padding-right: 15px;
   padding-left: 15px;
   padding-bottom: 20px;
-  border-top: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
   background: #fff;
   font-size: 14px;
 }
@@ -973,9 +974,8 @@ body {
 .Search__breadcrumbs {
   width: 100%;
   height: auto;
-  margin-top: 1em;
-  border-top: 1px solid #e1ddcc;
-  border-bottom: 1px solid #e1ddcc;
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4;
   background: #fbf9f7;
 }
 .Search__breadcrumbs ol {
@@ -1016,7 +1016,9 @@ body {
 .Search__breadcrumbs .home {
   color: #baba9b;
 }
-
+.Search__breadcrumbs a ,.Search__breadcrumbs li{
+  color:#463E2C !important;
+}
 .Search__input__inner {
   display: -webkit-box;
   display: flex;
