--- a/webroot/css/sitemap.css
+++ b/webroot/css/sitemap.css
@@ -108,7 +108,7 @@ footer {
   right: 0;
   opacity: 0;
   width: 100%;
-  border-bottom: 1px solid #E1DDCC;
+  border-bottom: 1px solid #eeece4;
   background: #fff;
   z-index: 1;
 }
@@ -117,14 +117,14 @@ footer {
   margin-top: 0;
   font-size: 16px;
   text-align: left;
-  border-top: 1px solid #E1DDCC;
+  border-top: 1px solid #eeece4;
   overflow: hidden;
 }
 .menu-area li::after {
   position: absolute;
   top: calc(50% - 8px);
   right: 16px;
-  color: #d6ceb4;
+  color: #E0DCCC;
   font-size: 16px;
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -222,14 +222,14 @@ main a {
   display: flex;
   justify-content: space-between;
   padding: 10px 15px;
-  border-top: 1px solid #E1DDCC;
+  border-top: 1px solid #eeece4;
   background: #F9F7F5;
 }
 .area-search__list-li {
   width: 24%;
   padding-top: 0.8em;
   padding-bottom: 0.8em;
-  border: 1px solid #E1DDCC;
+  border: 1px solid #eeece4;
   border-radius: 4px;
   background: #fff;
   font-size: 11px;
@@ -355,8 +355,8 @@ main a {
   width: 100%;
   height: 30px;
   /* margin-top: 1em; */
-  border-top: 1px solid #E1DDCC;
-  border-bottom: 1px solid #E1DDCC;
+  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #eeece4;
   background: #fbf9f7;
 }
 .Search__breadcrumbs ol {
