--- a/webroot/css/datsumou/search.css
+++ b/webroot/css/datsumou/search.css
@@ -293,7 +293,7 @@
   right: 16px;
   top: calc(50% - 8px);
   color: #E0DCCC;
-  font-size: 16px;
+  /* font-size: 16px; */
 }
 
 .Search__kodawari__header {
