--- a/webroot/css/sp/shop-detail.css
+++ b/webroot/css/sp/shop-detail.css
@@ -338,14 +338,14 @@ a {
 }
 
 .top-section-text {
-  line-height: 1.6;
-  color: #595960;
-  margin-top: 7px;
-  font-size: 12px;
+  line-height: 1.6 !important;
+  color: #595960 !important;
+  margin-top: 7px !important;
+  font-size: 12px !important;
 }
 
 .price-between-margin {
-  height: 20px;
+  height: 15px;
 }
 
 .price-sub-title {
@@ -997,4 +997,21 @@ a {
 
 .comment-chart {
   height: auto !important;
+}
+
+.middle-content {
+  margin: 0 !important;
+}
+
+.brand-info-detail,.brand-share {
+  padding:10px !important;
+}
+
+.brand-top-img-base{
+  opacity: .95;
+      width: 100%;
+      display: block;
+      height: 233px;
+      object-fit: cover;
+      background-color: black;
 }
