--- a/webroot/css/datsumou/reserve/index.css
+++ b/webroot/css/datsumou/reserve/index.css
@@ -316,7 +316,8 @@
  }
 
 .reserve-section .reserve-subquestion .reserve-email-desc {
-  padding: 10px 10px 0px; }
+  padding: 10px 10px 0px; 
+  line-height: 1.3;}
 
 .reserve-section .reserve-button-area {
   padding: 1.75em 16px;
@@ -401,6 +402,7 @@
   font-size: 10px;
   padding: 0;
   padding-top: 10px;
+  line-height: 1.3;
 }
 .form-contact .agreement {
   height: 160px;
