--- a/index.css
+++ b/index.css
@@ -25,8 +25,8 @@
   .search-shop .search-shop-list {
     background-color: #F9F7F5; }
 .search-shop .search-shop-list .search-shop-item {
-  border-bottom: 1px solid #eeece4;
-  border-top: 1px solid #eeece4;
+  border-bottom: 1px solid #e1ddcc;
+  border-top: 1px solid #e1ddcc;
 }
     .search-shop .search-shop-list .search-shop-item:not(:first-child) {
       margin-top: 8px; }
