--- a/webroot/campaign/dissatisfied/css/main.css
+++ b/webroot/campaign/dissatisfied/css/main.css
@@ -110,7 +110,8 @@ input, select {
   font-weight: 500;
   overflow-x: hidden;
   margin: 0;
-  font-family: "Hiragino Kaku Gothic ProN",メイリオ,Meiryo,sans-serif;
+  font-family: Helvetica, Arial, Hiragino Sans, "ヒラギノ角ゴシック",
+    "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", sans-serif;
 }
 
 @media screen and (max-width: 1040px) {
@@ -420,7 +421,8 @@ input, select {
   font-size: 1.6em;
   color: #920003;
   font-weight: 500;
-  font-family: 'Cormorant Infant',sans-serif;
+  font-family: Helvetica, Arial, Hiragino Sans, "ヒラギノ角ゴシック",
+    "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", sans-serif;
 }
 
 @media screen and (max-width: 769px) {
