--- a/webroot/css/base.css
+++ b/webroot/css/base.css
@@ -7,7 +7,8 @@
  */
 
 html {
-    font-family: sans-serif; /* 1 */
+    font-family: Helvetica, Arial, Hiragino Sans, "ヒラギノ角ゴシック",
+    "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", sans-serif; /* 1 */
     -ms-text-size-adjust: 100%; /* 2 */
     -webkit-text-size-adjust: 100%; /* 2 */
 }
