--- a/webroot/css/datsumou/ranking/index.css
+++ b/webroot/css/datsumou/ranking/index.css
@@ -8,6 +8,7 @@
 
 .ranking-text {
   padding: 1em 16px;
+  line-height: 16.8px;
 }
 
 .ranking-category .ranking-category-item-wrap:last-child {
@@ -195,6 +196,7 @@
   font-size: 16px;
   font-weight: bold;
   padding-left: 0.5em;
+  line-height: 21px;
 }
 .ranking-shop .ranking-shop-list .ranking-shop-item .ranking-shop-photo-area {
   display: -webkit-box;
