--- a/webroot/css/common.css
+++ b/webroot/css/common.css
@@ -148,6 +148,7 @@ p {
   height: 8px;
   border-top: 1px solid #eeece4;
   border-bottom: 1px solid #eeece4;
+  background: #faf8f5;
 }
 
 .ranking-category-item {
