--- a/webroot/css/terms.css
+++ b/webroot/css/terms.css
@@ -1,5 +1,5 @@
 .terms-head {
-  padding: 1em 0;
+  padding: 0;
   text-align: center;
   background-color: #ffffff;
   border-bottom: 1px solid #E0DCCC; }
