--- a/webroot/css/sp/shop-detail.css
+++ b/webroot/css/sp/shop-detail.css
@@ -163,6 +163,8 @@ a {
 
 .top-img {
   width: 100%;
+  height: 233px;
+  object-fit: cover;
 }
 
 .top-content {
@@ -188,8 +190,9 @@ a {
 .top-title {
   margin-top: 5px;
   text-shadow: 0px 0px 2px #000000a7;
-  font-size: 18px;
+  font-size: 18px !important;
   font-weight: 500;
+  padding: 0px !important
 }
 
 .top-section-inner {
