--- a/webroot/puril/css/main.css
+++ b/webroot/puril/css/main.css
@@ -237,11 +237,23 @@ footer {
   padding-left: 1em;
   font-size: 16px;
 }
+
+.home-area__title {
+    position: relative;
+    display: block;
+    width: 100%;
+    color: #463f2d;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-flex;
+    align-items: center;
+}
 .home-area__title img {
   margin-right: 0.5em;
 }
 .home-area__title .small {
   font-size: 14px;
+  font-weight: initial !important;
 }
 .home-area__list {
   display: -webkit-box;
