--- a/webroot/css/sp/shop-detail.css
+++ b/webroot/css/sp/shop-detail.css
@@ -1006,9 +1006,8 @@ a {
   margin: 0 !important;
 }
 
-.brand-info-detail,.brand-share,.brand-kuchikomi,.brand-datsumou,.brand-shops {
-  padding:10px !important;
-  border: 0 !important;
+.content-title,.brand-info-detail,.brand-kuchikomi-title {
+  padding: 10px !important;
 }
 
 .brand-top-img-base{
