--- a/webroot/css/datsumou/brand/index.css
+++ b/webroot/css/datsumou/brand/index.css
@@ -307,7 +307,7 @@
   .brand-info-detail .content-title {
     padding-bottom: .5em; }
   .brand-info-detail .brand-info-detail-area-wrap .brand-info-detail-area:not(:first-child) {
-    padding-top: 2em; }
+    padding-top: 10px; }
   .brand-info-detail .brand-info-detail-area-wrap .brand-info-detail-area .brand-info-detail-title {
     font-size: 14px;
     font-weight: bold;
@@ -363,7 +363,6 @@
     color:#13131e;
   }
   .brand-info-detail-remark {
-    margin-top: 10px;
     font-size: 13px;
     font-weight: 300;
     color: #777777;
